<resources>
    <string name="app_name">Multimeter</string>

    <!--Connection Fragment-->
    <string name="connection_specifier">Connection Status:</string>
    <string name="connection_status">Not Connected</string>
    <string name="connection_help">You are not connected to a device. Please connect to a multimeter device from the internal settings on this device.</string>
    <string name="connection_button">Device Settings</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="createAccount">Create Account</string>
    <string name="or">OR</string>
    <string name="log_out">log out</string>
    <string name="email_mandatory_field">Email*</string>
    <string name="username">Username</string>
    <string name="password_mandatory_field">Password*</string>
    <string name="confirm_password_mandatory_field">Confirm password*</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_experiment">Add experiment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="measure_button">Take Measurement</string>

    <!-- Settings Activity -->
    <string name="enter_name">Enter Name:</string>
    <string name="name">Name</string>
    <string name="light_dark_mode">Light/Dark Mode</string>
    <string name="save">save</string>
    <string name="enter_username">Enter Username:</string>

    <!-- Frequency Setting Spinner -->
    <string-array name="spinnerFrequency">
        <item>30 Hz</item>
        <item>60 Hz</item>
        <item>90 Hz</item>
        <item>120 Hz</item>
    </string-array>

    <!-- Create Experiment -->
    <string name="title">Title</string>
    <string name="titleHint">Enter Title</string>
    <string name="collaborators">Collaborators</string>
    <string name="collaboratorsHint">Enter Collaborators</string>
    <string name="currentTime">Current Time</string>
</resources>